<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF8A80"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imgBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@color/material_on_background_disabled"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tvDesc" />

            <ImageButton
                android:id="@+id/imgBtnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="10dp"
                android:background="@color/material_on_background_disabled"
                android:padding="10dp"
                android:src="@drawable/ic_more" />

        </FrameLayout>


        <ImageView
            android:id="@+id/ivDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/add_screen_image_placeholder"
            app:layout_constraintTop_toBottomOf="@id/frameLayout" />

        <FrameLayout
            android:id="@+id/frameLayoutIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/ivDetail">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border"/>

            <ImageButton
                android:id="@+id/ibSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_send"/>

        </FrameLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutIcon"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutIcon" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/date"
            android:textSize="12sp"
            android:textColor="#00897B"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"/>

        <Button
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_text_view_on_map"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>